경쟁 피시방 조회 구현